--- a/papers/retrosynthesis/references.bib
+++ b/papers/retrosynthesis/references.bib
@@ -446,4 +446,21 @@
   pages   = {1127 - 1156},
 }
 
+@Article{Preuss,
+  author  = {Marwin H.S. Segler and Mike Preuss and Mark P. Waller},
+  title   = {Planning chemical synthesis with deep neural networks and symbolic AI},
+  journal = {Nature},
+  year    = {2018},
+  volume  = {555},
+  pages   = {604 - 610},
+}
+
+@Misc{tensorflow,
+  author = {Mart\'{\i}n~Abadi and Ashish~Agarwal and Paul~Barham and Eugene~Brevdo and Zhifeng~Chen and Craig~Citro and Greg~S.~Corrado and Andy~Davis and Jeffrey~Dean and Matthieu~Devin and Sanjay~Ghemawat and Ian~Goodfellow and Andrew~Harp and Geoffrey~Irving and Michael~Isard and Yangqing Jia and Rafal~Jozefowicz and Lukasz~Kaiser and Manjunath~Kudlur and Josh~Levenberg and Dan~Man\'{e} and Rajat~Monga and Sherry~Moore and Derek~Murray and Chris~Olah and Mike~Schuster and Jonathon~Shlens and Benoit~Steiner and Ilya~Sutskever and Kunal~Talwar and Paul~Tucker and Vincent~Vanhoucke and Vijay~Vasudevan and Fernanda~Vi\'{e}gas and Oriol~Vinyals and Pete~Warden and Martin~Wattenberg and Martin~Wicke and Yuan~Yu and Xiaoqiang~Zheng},
+  title  = {{TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+  year   = {2015},
+  note   = {Software available from tensorflow.org},
+  url    = {http://tensorflow.org/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
