--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -228,14 +228,44 @@ Then we trained our model with cyclic learning rate schedule, eq. \ref{eq:rate},
 
 Our final T3 model outperforms \cite{Pande} by 5.3\% with beam search and more critical it is also effective with greedy search 40.6\%. The latter one is much faster and consequently more suitable for virtual screening campaigns. 
 
-\section{Discussion}
+It worth to notice that TOP-5 accuracy reaches almost 70\%. That means the model can correctly predict reactants but sometimes scoring is wrong and TOP-1 is much less. We tried to improve TOP-1 scoring with two different approaches: internal confidence estimation and forward reaction prediction. 
 
-\begin{figure}
-  \centering
-  \includegraphics[width = 16.5cm]{images/probland.pdf}
-  \caption{Landscapes of probabilities for predicting example reaction, fig. \ref{fig:example}, with  T3 model(left) and T4 (distilled) model (right). }
-  \label{fig:landscape}
-\end{figure}
+\subsection{Internal scoring}
+
+The beam search calculates the sum of negative logarithms of probabilities of selecting a token at a particular step, and thus, this value can be a measure of internal confidence. To check this hypothesis, we selected T3-2 model and estimated its internal performance to distinguish between correct and invalid predictions.  The parameters of the classifier were: AUC = 0.77, optimal threshold = 0.00678. Then we validated the model with an additional condition: if the score is less than optimal threshold we selected the answer, otherwise we went to the next candidate in the possible reactant sets returned by the beam search. The results were even worse than without thresholds, 28.45 vs. 42.42.   A possible\begin{wrapfigure}{r}{7cm}  
+  \vspace{-0.2cm}
+  \includegraphics[width = 7cm]{images/auc.pdf}
+  \caption{Internal classification performance.}
+  \label{fig:auc}
+  \vspace{-1.7cm}
+\end{wrapfigure}
+ explanation is that the estimation does not deal with organic chemistry. The model tries to derive some character-based scoring relying only on tokens in a string and increasing this value does not influence the quality of prognosis. The same effect we saw during training when the character accuracy is 98\% whereas chemistry-based metric is much lower. 
+ 
+ 
+Estimation of optimal thresholds on training sets almost always a bad idea due to the biasing of a model to its source data. The correct way is to use validation dataset instead. We built the classifier for the T1-2 with characteristics: AUC = 0.65, optimal threshold 0.00396, and applied it for testing the model. The results were again worse, 13.5\% vs. 40.85\%. There are no significant differencies of accuracies when using unnormalized or normalized on the length of the reactants string scores. Fig. \ref{fig:auc} shows ROC curves for T1-2 and T3-2 models derived at T=1.3. Evidently one cannot 
+
+\subsection{Forward reaction prediction scoring}
+
+We built a forward reaction prediction model based on the same data and with the same parameters as we did for retrosynthesis. The final model correctly predicted 84\% of test data. Then we embedded the model in the following algorithm. Once the retrosynthesis model returned possible sets of reactants, we applied the forward model for each item in this set, and the forward model made a prognosis for a product. Then we compared the predicted and real outcomes, and if they both were the same, this reactant set was used as the solution to a particular problem. The example of this procedure is illustrated below for a target molecule: 
+
+
+\noindent\textbf{Cc1cnc(N2CCN(C(=O)c3ccc(N4CCCS4(=O)=O)nc3C)CC2)c(C)c1}
+
+The first beam returns  C[S+](C)(C)=O.Cc1nc(Br)ccc1C(=O)N1CCN(c2ccc(N3CCCS3(=O)=O)c(C)n2)CC1.
+And estimation of a product Cc1nc(Br)ccc1C(=O)N1CCN(c2ccc(N3CCCS3(=O)=O)c(C)n2)CC1 differs from the target. Continue analyzing other beams.
+
+The second beam contains C[Mg+].Cc1nc(Br)ccc1C(=O)N1CCN(c2ccc(N3CCCS3(=O)=O)c(C)n2)CC1 and the forward model predicts   Cc1ccc(C(=O)N2CCN(c3ccc(N4CCCS4(=O)=O)c(C)n3)CC2)c(C)n1 as a product and again it is not we expect.
+
+Next beam with Cc1nc(Br)ccc1C(=O)N1CCN(c2ccc(N3CCCS3(=O)=O)c(C)n2)CC1.Cc1cnc(N2CCNCC2)c(C)c1  gives a product: Cc1cnc(N2CCN(c3ccc(C(=O)N4CCN(c5ccc(N6CCCS6(=O)=O)c(C)n5)CC4)c(C)n3)CC2)c(C)c1, which is again wrong.
+
+At last the fourth beam predicts valid reactants COC(=O)c1ccc(N2CCCS2(=O)=O)nc1C.Cc1cnc(N2CCNCC2)c(C)c1 and the forward model  assembles the right product from them 
+
+\textbf{Cc1cnc(N2CCN(C(=O)c3ccc(N4CCCS4(=O)=O)nc3C)CC2)c(C)c1}.
+
+This schema strongly depends on the quality of the forward model. 
+
+
+\section{Discussion}
 
 Much attention paid in the scientific literature for rule-based approaches \cite{Preuss,Baylon}. Since the authors of \cite{Rules} have described the algorithm of automatic rule extraction from mapped reaction database several implementations of the procedure appeared, and then widely accepted by researchers. However, it should be noticed that, first, there is no algorithm to make atom-mapping \cite{BaskinReview} if it is absent (the typical situation with laboratory notebooks (ELN) for example). Second, all available information on synthesis usually contains only positive reactions, so all binary classification accuracies are inevitable overestimated because of artificial negative sets exploited in studies. Finally, the absence of commonly accepted dataset for testing makes the results of different groups practically disparate and  biased to those problems the authors tried to solve. The authors of \cite{Baylon} selected 40 molecules from DrugBank database to test their multiscale models, whereas \cite{Pande} used database specially prepared for classification \cite{Schneider}.  
 
